--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@storybook/web-components": "^6.1.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.2",
 		"@typescript-eslint/parser": "^4.14.2",
+		"@vonage/monowatch": "^0.0.4",
 		"@webcomponents/webcomponentsjs": "^2.5.0",
 		"@whitespace/storybook-addon-html": "^4.2.0",
 		"chai": "^4.2.0",
