--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"clean:typescript": "tsc -b --clean",
 		"clean:git": "git clean -xdf",
 		"clean": "yarn clean:typescript && yarn clean:git",
-		"watch": "node scripts/watcher.js",
+		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
 		"docs:spell-check": "spech docs/*.md"
