--- a/components/list/tsconfig.json
+++ b/components/list/tsconfig.json
@@ -1,25 +1,15 @@
 {
-	"extends": "@vonage/vvd-umbrella/configs/tsconfig.json",
-	"compilerOptions": {
-		"composite": true,
-		"rootDir": "src",
-		"outDir": ".",
-		"tsBuildInfoFile": ".tsbuildinfo"
-	},
-	"include": ["src/*.ts"],
-	"exclude": ["src/test/*.ts"],
-	"references": [
-		{
-			"path": "../../common/core"
-		},
-		{
-			"path": "../../common/foundation"
-		},
-		{
-			"path": "../../common/style-coupling"
-		},
-		{
-			"path": "../../components/expansion-panel"
-		}
-	]
+  "extends": "@vonage/vvd-umbrella/configs/tsconfig.json",
+  "compilerOptions": {
+    "composite": true,
+    "rootDir": "src",
+    "outDir": ".",
+    "tsBuildInfoFile": ".tsbuildinfo"
+  },
+  "include": [
+    "src/*.ts"
+  ],
+  "exclude": [
+    "src/test/*.ts"
+  ]
 }
