--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"clean:typescript": "tsc -b --clean",
 		"clean:git": "git clean -xdf",
 		"clean": "yarn clean:typescript && yarn clean:git",
-		"watch": "node scripts/watcher.js",
+		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
 		"docs:spell-check": "spech docs/*.md"
@@ -65,6 +65,7 @@
 		"@storybook/web-components": "^6.1.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.2",
 		"@typescript-eslint/parser": "^4.14.2",
+		"@vonage/monowatch": "^0.0.4",
 		"@webcomponents/webcomponentsjs": "^2.5.0",
 		"@whitespace/storybook-addon-html": "^4.2.0",
 		"chai": "^4.2.0",
