--- a/components/helper-message/package.json
+++ b/components/helper-message/package.json
@@ -27,13 +27,13 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-core": "^2.2.4",
-		"@vonage/vvd-foundation": "^2.2.4",
 		"@vonage/vwc-icon": "^2.2.4",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "^2.2.4",
+		"@vonage/vvd-style-coupling": "^2.2.4",
 		"@vonage/vvd-typography": "^2.2.4",
 		"@vonage/vvd-umbrella": "^2.2.4",
 		"typescript": "^4.1.3"
