--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"conventional-changelog-cli": "^2.1.0",
 		"deepmerge": "^4.2.2",
 		"depcheck": "YonatanKra/depcheck#vivid-version",
+		"element-f": "^2.0.0",
 		"es-dev-server": "^1.50.8",
 		"eslint": "^7.13.0",
 		"eslint-plugin-compat": "^3.9.0",
