--- a/components/pagination/package.json
+++ b/components/pagination/package.json
@@ -32,6 +32,7 @@
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.3.0",
 		"@vonage/vvd-typography": "2.3.0",
 		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
