--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"test:firefox": "karma start --coverage --browsers=FirefoxHeadless",
 		"test:safari": "karma start --coverage --browsers=SafariNative",
 		"test:dev": "yarn compile && concurrently -r \"yarn watch\" \"karma start karma.conf.spec.js\"",
-		"test:dev:ci": "yarn compile && concurrently -r \"yarn tsc:watch\" \"RUN=CI karma start karma.conf.spec.js\"",
+		"test:dev:ci": "yarn compile && concurrently -r \"yarn watch\" \"RUN=CI karma start karma.conf.spec.js\"",
 		"test:update-snapshots": "karma start --update-snapshots",
 		"test:prune-snapshots": "karma start --prune-snapshots",
 		"test:bs": "karma start --coverage",
