--- a/common/core/package.json
+++ b/common/core/package.json
@@ -27,12 +27,12 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-fonts": "^2.3.0",
-		"@vonage/vvd-scheme": "^2.3.0",
+		"@vonage/vvd-fonts": "2.3.0",
+		"@vonage/vvd-scheme": "2.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
