--- a/common/fonts/package.json
+++ b/common/fonts/package.json
@@ -31,8 +31,8 @@
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-foundation": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-foundation": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
