--- a/common/scheme/package.json
+++ b/common/scheme/package.json
@@ -22,12 +22,12 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-foundation": "^2.3.0",
+		"@vonage/vvd-foundation": "2.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-design-tokens": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"lit-element": "^2.4.0",
 		"typescript": "^4.1.3"
 	}
