--- a/common/style-coupling/package.json
+++ b/common/style-coupling/package.json
@@ -25,8 +25,8 @@
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-design-tokens": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"lit-element": "^2.4.0",
 		"typescript": "^4.1.3"
 	}
