--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -26,11 +26,11 @@
 	},
 	"dependencies": {
 		"@types/kefir": "^3.8.5",
-		"@vonage/vwc-media-controller": "^2.3.0",
+		"@vonage/vwc-media-controller": "2.3.0",
 		"kefir": "^3.8.7"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
