--- a/components/badge/package.json
+++ b/components/badge/package.json
@@ -28,15 +28,15 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "^2.3.0",
-		"@vonage/vvd-foundation": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
+		"@vonage/vvd-foundation": "2.3.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "^2.3.0",
-		"@vonage/vvd-typography": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-design-tokens": "2.3.0",
+		"@vonage/vvd-typography": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
