--- a/components/chips/package.json
+++ b/components/chips/package.json
@@ -30,17 +30,17 @@
 		"@material/chips": "9.0.0-canary.1c156d69d.0",
 		"@material/mwc-base": "^0.20.0",
 		"@material/mwc-ripple": "^0.20.0",
-		"@vonage/vvd-core": "^2.3.0",
-		"@vonage/vvd-style-coupling": "^2.3.0",
-		"@vonage/vwc-icon": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
+		"@vonage/vvd-style-coupling": "2.3.0",
+		"@vonage/vwc-icon": "2.3.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "^2.3.0",
-		"@vonage/vvd-typography": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-design-tokens": "2.3.0",
+		"@vonage/vvd-typography": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
