--- a/components/fab/package.json
+++ b/components/fab/package.json
@@ -28,16 +28,16 @@
 	},
 	"dependencies": {
 		"@material/mwc-fab": "^0.20.0",
-		"@vonage/vvd-core": "^2.3.0",
-		"@vonage/vvd-style-coupling": "^2.3.0",
-		"@vonage/vwc-icon": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
+		"@vonage/vvd-style-coupling": "2.3.0",
+		"@vonage/vwc-icon": "2.3.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "^2.3.0",
-		"@vonage/vvd-typography": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-design-tokens": "2.3.0",
+		"@vonage/vvd-typography": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
