--- a/components/media-controller/package.json
+++ b/components/media-controller/package.json
@@ -25,13 +25,13 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
 		"kefir": "^3.8.7",
 		"lit-element": "^2.4.0",
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
