--- a/components/notched-outline/package.json
+++ b/components/notched-outline/package.json
@@ -32,7 +32,7 @@
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
