--- a/components/relative-time/package.json
+++ b/components/relative-time/package.json
@@ -26,12 +26,12 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
 		"date-fns": "^2.14.0",
 		"kefir": "^3.8.7"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	},
 	"#comment": "keeping it private until further developed",
