--- a/components/theme-switch/package.json
+++ b/components/theme-switch/package.json
@@ -28,14 +28,14 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "^2.3.0",
-		"@vonage/vvd-scheme": "^2.3.0",
-		"@vonage/vwc-switch": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
+		"@vonage/vvd-scheme": "2.3.0",
+		"@vonage/vwc-switch": "2.3.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
