--- a/components/top-app-bar/package.json
+++ b/components/top-app-bar/package.json
@@ -27,14 +27,14 @@
 	},
 	"dependencies": {
 		"@material/mwc-top-app-bar": "^0.20.0",
-		"@vonage/vvd-core": "^2.3.0",
-		"@vonage/vvd-style-coupling": "^2.3.0",
+		"@vonage/vvd-core": "2.3.0",
+		"@vonage/vvd-style-coupling": "2.3.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-typography": "^2.3.0",
-		"@vonage/vvd-umbrella": "^2.3.0",
+		"@vonage/vvd-typography": "2.3.0",
+		"@vonage/vvd-umbrella": "2.3.0",
 		"typescript": "^4.1.3"
 	}
 }
