--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"@vonage/monowatch": "^0.0.4",
 		"@webcomponents/webcomponentsjs": "^2.5.0",
 		"@whitespace/storybook-addon-html": "^4.2.0",
+		"axe-core": "^4.1.1",
 		"chai": "^4.2.0",
 		"chai-a11y-axe": "^1.3.1",
 		"chai-karma-snapshot": "^0.8.0",
