issue #789: implementing the debouncer as decorator

--- a/common/foundation/tsconfig.json
+++ b/common/foundation/tsconfig.json
@@ -4,8 +4,9 @@
     "composite": true,
     "rootDir": "src",
     "outDir": ".",
-    "tsBuildInfoFile": ".tsbuildinfo"
-  },
+    "tsBuildInfoFile": ".tsbuildinfo",
+		"emitDecoratorMetadata": true,
+	},
   "include": [
     "src/**/*.ts"
   ],
