--- a/components/banner/package.json
+++ b/components/banner/package.json
@@ -34,6 +34,9 @@
 		"@vonage/vvd-foundation": "^2.3.0",
 		"@vonage/vvd-typography": "2.3.0",
 		"@vonage/vvd-umbrella": "2.3.0",
+		"@vonage/vwc-button": "^2.3.0",
+		"lit-html": "^1.3.0",
+		"lodash": "^4.17.21",
 		"typescript": "^4.1.3"
 	}
 }
