--- a/components/banner/package.json
+++ b/components/banner/package.json
@@ -30,11 +30,11 @@
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "^2.3.0",
-		"@vonage/vvd-foundation": "^2.3.0",
-		"@vonage/vvd-typography": "2.3.0",
-		"@vonage/vvd-umbrella": "2.3.0",
-		"@vonage/vwc-button": "^2.3.0",
+		"@vonage/vvd-design-tokens": "2.5.0",
+		"@vonage/vvd-foundation": "2.5.0",
+		"@vonage/vvd-typography": "2.5.0",
+		"@vonage/vvd-umbrella": "2.5.0",
+		"@vonage/vwc-button": "2.5.0",
 		"lit-html": "^1.3.0",
 		"lodash": "^4.17.21",
 		"typescript": "^4.1.3"
