--- a/components/banner/package.json
+++ b/components/banner/package.json
@@ -27,16 +27,17 @@
 	},
 	"dependencies": {
 		"lit-element": "^2.4.0",
-		"tslib": "^2.0.3"
+		"tslib": "^2.0.3",
+		"@vonage/vvd-core": "2.5.0",
+		"@vonage/vvd-foundation": "2.5.0",
+		"@vonage/vwc-icon": "2.5.0",
+		"@vonage/vwc-icon-button": "2.5.0"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.5.0",
 		"@vonage/vvd-foundation": "2.5.0",
-		"@vonage/vvd-typography": "2.5.0",
 		"@vonage/vvd-umbrella": "2.5.0",
-		"@vonage/vwc-button": "2.5.0",
 		"lit-html": "^1.3.0",
-		"lodash": "^4.17.21",
 		"typescript": "^4.1.3"
 	}
 }
