--- a/components/media-controller/package.json
+++ b/components/media-controller/package.json
@@ -31,6 +31,7 @@
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.5.0",
 		"@vonage/vvd-umbrella": "2.5.0",
 		"typescript": "^4.1.3"
 	}
