--- a/components/dialog/package.json
+++ b/components/dialog/package.json
@@ -34,6 +34,7 @@
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.5.0",
 		"@vonage/vvd-umbrella": "2.5.0",
 		"typescript": "^4.1.3"
 	}
