--- a/components/media-controller/package.json
+++ b/components/media-controller/package.json
@@ -26,6 +26,7 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-core": "2.5.0",
+		"@vonage/vwc-icon": "2.5.0",
 		"kefir": "^3.8.7",
 		"lit-element": "^2.4.0",
 		"ramda": "^0.27.1"
