--- a/components/snackbar/package.json
+++ b/components/snackbar/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@vonage/vvd-core": "2.5.0",
 		"@vonage/vwc-icon": "2.5.0",
+		"@material/mwc-snackbar": "0.20.0",
 		"lit-element": "2.3.0",
 		"tslib": "2.0.3"
 	},
