--- a/components/expansion-panel/package.json
+++ b/components/expansion-panel/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@material/mwc-base": "^0.20.0",
+		"@material/mwc-ripple": "^0.20.0",
 		"@vonage/vvd-core": "2.5.0",
 		"@vonage/vwc-icon": "2.5.0",
 		"lit-element": "^2.4.0",
