--- a/components/snackbar/package.json
+++ b/components/snackbar/package.json
@@ -30,6 +30,7 @@
 		"@vonage/vwc-icon": "2.5.0",
 		"@material/mwc-snackbar": "0.20.0",
 		"lit-element": "2.3.0",
+		"lit-html": "1.3.0",
 		"tslib": "2.0.3"
 	},
 	"devDependencies": {
