--- a/components/snackbar/package.json
+++ b/components/snackbar/package.json
@@ -27,7 +27,9 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-core": "2.5.0",
+		"@vonage/vwc-foundation": "2.5.0",
 		"@vonage/vwc-icon": "2.5.0",
+		"@vonage/vwc-icon-button": "2.5.0",
 		"@material/mwc-snackbar": "0.20.0",
 		"lit-element": "2.3.0",
 		"lit-html": "1.3.0",
