--- a/components/note/package.json
+++ b/components/note/package.json
@@ -30,6 +30,7 @@
 		"@vonage/vvd-foundation": "2.6.0",
 		"@vonage/vwc-icon": "2.6.0",
 		"lit-element": "^2.4.0",
+		"lit-html": "1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
