--- a/components/icon-button-toggle/package.json
+++ b/components/icon-button-toggle/package.json
@@ -32,6 +32,7 @@
 		"@vonage/vvd-style-coupling": "2.6.0",
 		"@vonage/vwc-icon-button": "2.6.0",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
