--- a/components/icon-button-toggle/package.json
+++ b/components/icon-button-toggle/package.json
@@ -26,12 +26,13 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-icon-button": "^0.20.0",
-		"@material/mwc-icon-button-toggle": "^0.20.0",
+		"@material/mwc-icon-button": "^0.21.0",
+		"@material/mwc-icon-button-toggle": "^0.21.0",
 		"@vonage/vvd-core": "2.6.0",
 		"@vonage/vvd-style-coupling": "2.6.0",
 		"@vonage/vwc-icon-button": "2.6.0",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
