--- a/components/pagination/package.json
+++ b/components/pagination/package.json
@@ -26,7 +26,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@material/mwc-ripple": "0.20.0",
+		"@material/mwc-ripple": "^0.21.0",
 		"@vonage/vvd-core": "2.6.0",
 		"@vonage/vwc-icon": "2.6.0",
 		"lit-element": "2.3.0",
