--- a/package.json
+++ b/package.json
@@ -130,7 +130,9 @@
 		"tslib": "^2.0.3",
 		"typescript": "^4.1.3",
 		"uuid": "^8.3.2",
-		"web-component-analyzer": "^1.1.6"
+		"web-component-analyzer": "^1.1.6",
+		"query-ast": "1.0.3",
+		"scss-parser": "1.0.4"
 	},
 	"engines": {
 		"node": ">=12.18.4"
