--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@vivid/root",
 	"private": true,
-	"description": "Web Components based on branded design system by Vonage, following open-wc recommendations",
+	"description": "Web Components based on branded design system by Vonage",
 	"author": "Vonage",
 	"license": "ISC",
 	"workspaces": [
