--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
 		"concurrently": "^5.2.0",
 		"conventional-changelog-cli": "^2.1.0",
 		"deepmerge": "^4.2.2",
-		"depcheck": "YonatanKra/depcheck#vivid-version",
+		"depcheck": "^1.4.0",
 		"element-f": "^2.0.0",
 		"es-dev-server": "^1.50.8",
 		"eslint": "^7.13.0",
