--- a/components/data-grid/package.json
+++ b/components/data-grid/package.json
@@ -33,7 +33,7 @@
 		"@vonage/vwc-checkbox": "2.6.2",
 		"@vonage/vwc-icon": "2.6.2",
 		"lit-element": "^2.4.0",
-		"lit-html": "1.3.0",
+		"lit-html": "^1.1.2",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
