--- a/components/snackbar/package.json
+++ b/components/snackbar/package.json
@@ -29,10 +29,10 @@
 		"@vonage/vvd-core": "2.6.2",
 		"@vonage/vvd-foundation": "2.6.2",
 		"@vonage/vwc-icon-button": "2.6.2",
-		"@material/mwc-snackbar": "0.21.0",
-		"lit-element": "2.3.0",
-		"lit-html": "1.3.0",
-		"tslib": "2.0.3"
+		"@material/mwc-snackbar": "^0.21.0",
+		"lit-element": "^2.3.0",
+		"lit-html": "^1.3.0",
+		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.6.2",
