--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
 		"watch": "monowatch",
 		"wca:json": "wca analyze components/*/src/*.?s --outFile custom-elements.json",
 		"wca:compile:json": "yarn compile && yarn wca:custom-elements",
-		"docs:spell-check": "spech docs/*.md"
+		"docs:spell-check": "spech docs/*.md",
+		"build-ui-tests": "webpack -c ./ui-tests/webpack.config.js",
+		"ui-tests": "ts-node ./ui-tests/index.ts"
 	},
 	"devDependencies": {
 		"@open-wc/eslint-config": "^3.0.0",
@@ -72,6 +74,7 @@
 		"chai-a11y-axe": "^1.3.1",
 		"chai-karma-snapshot": "^0.8.0",
 		"chokidar": "^3.4.0",
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
 		"command-line-args": "^5.1.1",
 		"command-line-usage": "^6.1.0",
 		"concurrently": "^5.2.0",
@@ -113,6 +116,8 @@
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
+		"pixelmatch": "^5.2.1",
+		"playwright": "^1.10.0",
 		"prism": "^4.1.2",
 		"sass": "^1.30.0",
 		"semver-compare": "^1.0.0",
@@ -127,10 +132,13 @@
 		"stylelint-config-sass-guidelines": "^7.1.0",
 		"stylelint-no-unsupported-browser-features": "^4.1.4",
 		"tar-stream": "^2.1.4",
+		"ts-loader": "^9.1.2",
+		"ts-node": "^9.1.1",
 		"tslib": "^2.0.3",
 		"typescript": "^4.1.3",
 		"uuid": "^8.3.2",
 		"web-component-analyzer": "^1.1.6",
+		"webpack-cli": "^4.7.0",
 		"xmlhttprequest-ssl": "^1.6.2"
 	},
 	"engines": {
