--- a/components/snackbar/package.json
+++ b/components/snackbar/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "@vonage/vwc-note",
+	"name": "@vonage/vwc-snackbar",
 	"version": "2.6.2",
-	"description": "Note component",
-	"homepage": "https://github.com/Vonage/vivid/tree/master/components/note#readme",
+	"description": "Snackbar component",
+	"homepage": "https://github.com/Vonage/vivid/tree/master/components/snackbar#readme",
 	"license": "ISC",
-	"main": "vwc-note.js",
-	"module": "vwc-note.js",
+	"main": "vwc-snackbar.js",
+	"module": "vwc-snackbar.js",
 	"files": [
 		"*.js",
 		"*.ts",
@@ -14,7 +14,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/vonage/vivid.git",
-		"directory": "components/note"
+		"directory": "components/snackbar"
 	},
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
@@ -28,9 +28,10 @@
 	"dependencies": {
 		"@vonage/vvd-core": "2.6.2",
 		"@vonage/vvd-foundation": "2.6.2",
-		"@vonage/vwc-icon": "2.6.2",
-		"lit-element": "^2.4.0",
-		"lit-html": "1.3.0",
+		"@vonage/vwc-icon-button": "2.6.2",
+		"@material/mwc-snackbar": "^0.21.0",
+		"lit-element": "^2.3.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
