--- a/components/textfield/package.json
+++ b/components/textfield/package.json
@@ -41,6 +41,7 @@
 		"@vonage/vvd-design-tokens": "2.6.2",
 		"@vonage/vvd-typography": "2.6.2",
 		"@vonage/vvd-umbrella": "2.6.2",
+		"@vonage/vwc-icon-button": "2.6.2",
 		"typescript": "^4.1.3"
 	}
 }
