--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
 		"husky": "^5.0.8",
 		"immer": "^8.0.1",
 		"ini": "^1.3.6",
+		"jimp": "^0.16.1",
 		"karma": "^5.2.3",
 		"karma-browserstack-launcher": "^1.6.0",
 		"karma-chai": "^0.1.0",
@@ -117,7 +118,6 @@
 		"lodash": "^4.17.21",
 		"minimist": "^1.2.5",
 		"mocha": "^8.1.3",
-		"pixelmatch": "^5.2.1",
 		"playwright": "^1.10.0",
 		"prism": "^4.1.2",
 		"sass": "^1.30.0",
