--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -258,7 +258,7 @@ jobs:
         run: npm install -g yarn
 
       - name: Install packages
-        run: yarn install
+        run: yarn install && yarn playwright install-deps
 
       - name: Cache build
         uses: actions/cache@v2
