--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -277,6 +277,7 @@ jobs:
         run: yarn ui-tests
 
       - name: Upload chrome coverage as an artifact
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: snapshot
