--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -276,12 +276,12 @@ jobs:
       - name: Test components
         run: yarn ui-tests
 
-      - name: Upload chrome coverage as an artifact
+      - name: Upload snapshot and diff
         if: always()
         uses: actions/upload-artifact@v2
         with:
           name: snapshot
-          path: ./ui-tests/tmpScreenshot.png
+          path: ./ui-tests/*.png
 
   code-standards:
     needs: cache-yarn-and-build
