Optimize test run

--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -257,8 +257,25 @@ jobs:
       - name: Install yarn
         run: npm install -g yarn
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - name: Cache yarn dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            **/node_modules
+          key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
+
       - name: Install packages
-        run: yarn install && yarn playwright install-deps
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
+
+      - name: Install playwright deps
+        run: yarn playwright install-deps
 
       - name: Cache build
         uses: actions/cache@v2
