--- a/components/textfield/package.json
+++ b/components/textfield/package.json
@@ -35,13 +35,13 @@
 		"@vonage/vwc-icon": "2.9.1",
 		"@vonage/vwc-notched-outline": "2.9.1",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.9.1",
 		"@vonage/vvd-typography": "2.9.1",
 		"@vonage/vvd-umbrella": "2.9.1",
-		"@vonage/vwc-icon-button": "2.9.1",
 		"typescript": "^4.1.3"
 	}
 }
