--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@vonage/vvd-core": "2.9.1",
 		"@vonage/vwc-menu": "2.9.1",
+		"@vonage/vwc-surface": "2.9.1",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
