--- a/components/surface/package.json
+++ b/components/surface/package.json
@@ -1,12 +1,11 @@
 {
-	"name": "@vonage/vwc-menu",
+	"name": "@vonage/vwc-surface",
 	"version": "2.9.1",
-	"description": "menu component",
-	"author": "yinonov <yinon@hotmail.com>",
-	"homepage": "https://github.com/Vonage/vivid/tree/master/components/menu#readme",
+	"description": "Surface component",
+	"homepage": "https://github.com/Vonage/vivid/tree/master/components/surface#readme",
 	"license": "ISC",
-	"main": "vwc-menu.js",
-	"module": "vwc-menu.js",
+	"main": "vwc-surface.js",
+	"module": "vwc-surface.js",
 	"files": [
 		"*.js",
 		"*.ts",
@@ -15,7 +14,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/vonage/vivid.git",
-		"directory": "components/menu"
+		"directory": "components/surface"
 	},
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
@@ -29,12 +28,11 @@
 	"dependencies": {
 		"@material/mwc-menu": "^0.21.0",
 		"@vonage/vvd-core": "2.9.1",
-		"@vonage/vwc-list": "2.9.1",
-		"@vonage/vwc-surface": "2.9.1",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.9.1",
 		"@vonage/vvd-umbrella": "2.9.1",
 		"typescript": "^4.1.3"
 	}
