--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -26,7 +26,7 @@
 	},
 	"dependencies": {
     "lit-element": "^2.4.0",
-		"lit-html": "^1.1.0"
+		"lit-html": "^1.1.0",
 		"@types/kefir": "^3.8.5",
 		"@vonage/vwc-media-controller": "2.9.1",
 		"kefir": "^3.8.7"
