--- a/components/textfield/package.json
+++ b/components/textfield/package.json
@@ -35,6 +35,7 @@
 		"@vonage/vwc-icon": "2.9.1",
 		"@vonage/vwc-notched-outline": "2.9.1",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.0.3"
 	},
 	"devDependencies": {
