--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -300,6 +300,62 @@ jobs:
           name: snapshot
           path: ./ui-tests/*.png
 
+  chromatic:
+    needs: cache-yarn-and-build
+    runs-on: ubuntu-latest
+    env:
+      ARTIFACTORY_AUTH_TOKEN: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PAT }}
+
+      - name: Setup NodeJS 14
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install yarn
+        run: npm install -g yarn
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - name: Cache yarn dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            **/node_modules
+          key: vivid-cache-yarn-${{ hashFiles('**/package.json') }}
+
+      - name: Install packages
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
+
+      - name: Cache build
+        uses: actions/cache@v2
+        id: build-cache
+        with:
+          path: |
+            common
+            components
+          key: vivid-cache-build-${{ github.event.pull_request.head.sha }}
+
+      - name: Build components
+        if: steps.build-cache.outputs.cache-hit != 'true'
+        run: yarn compile
+
+      - name: Publish to Chromatic
+        uses: chromaui/action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+
   code-standards:
     needs: cache-yarn-and-build
     runs-on: ubuntu-20.04
