--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -355,6 +355,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          buildScriptName: 'storybook:build'
 
   code-standards:
     needs: cache-yarn-and-build
