--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -311,6 +311,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.PAT }}
+          fetch-depth: 0
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
