--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"chai-dom": "^1.9.0",
 		"chai-karma-snapshot": "^0.8.0",
 		"chai-spies": "^1.0.0",
+		"change-case": "^4.1.2",
 		"chokidar": "^3.4.0",
 		"clean-webpack-plugin": "^4.0.0-alpha.0",
 		"command-line-args": "^5.1.1",
