--- a/components/icon/package.json
+++ b/components/icon/package.json
@@ -31,7 +31,8 @@
 		"@vonage/vvd-foundation": "2.11.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
-		"ramda": "^0.27.1"
+		"ramda": "^0.27.1",
+		"@material/mwc-base": "^0.21.0"
 	},
 	"devDependencies": {
 		"@types/ramda": "^0.27.36",
