--- a/components/calendar/package.json
+++ b/components/calendar/package.json
@@ -35,6 +35,7 @@
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.11.0",
 		"@vonage/vvd-typography": "2.11.0",
+		"@vonage/vvd-foundation": "2.11.0",
 		"@vonage/vvd-umbrella": "2.11.0",
 		"typescript": "^4.1.3"
 	}
