--- a/components/calendar/package.json
+++ b/components/calendar/package.json
@@ -20,7 +20,7 @@
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
 		"build:typescript": "tsc -b",
-		"build:styles": "umbrella-style-modules",
+		"build:styles": "umbrella-style-modules --path=\"./src\"",
 		"build": "yarn run build:styles && yarn run build:typescript"
 	},
 	"bugs": {
@@ -35,6 +35,7 @@
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.11.0",
 		"@vonage/vvd-typography": "2.11.0",
+		"@vonage/vvd-foundation": "2.11.0",
 		"@vonage/vvd-umbrella": "2.11.0",
 		"typescript": "^4.3.2"
 	}
