chore(ci): remove personal access tokens (#897)
* Update compile-test.yml (#895)

optimize CI runs

* removed use of PATs

* removed pull request types

Co-authored-by: Yahav Ravid <51640960+yravid@users.noreply.github.com>

--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
@@ -56,15 +54,13 @@ jobs:
 
   test-safari:
     needs: cache-yarn-and-build
-    runs-on: macOS-latest
+    runs-on: macos-latest
     env:
       ARTIFACTORY_AUTH_TOKEN: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
@@ -122,8 +118,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
@@ -181,8 +175,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
@@ -239,15 +231,13 @@ jobs:
 
   test-UI:
     needs: cache-yarn-and-build
-    runs-on: macOS-latest
+    runs-on: macos-latest
     env:
       ARTIFACTORY_AUTH_TOKEN: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
@@ -309,8 +299,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
@@ -366,8 +354,6 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@v2
-          with:
-            token: ${{ secrets.PAT }}
 
         - name: Setup NodeJS 14
           uses: actions/setup-node@v2
