--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -12,4 +12,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+      - run: rm .npmrc
       - run: yarn
+        name: Install NPM dependencies
+        env:
+          "yarn_always_auth": true,
+          "yarn__auth": ${{ secrets.ARTIFACTORY_AUTH_TOKEN }},
+          "yarn_registry": "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
