--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 14
       - run: rm .npmrc
-      - run: env
+      - run: yarn install
         name: Install NPM dependencies
         env:
           "yarn_always_auth": true,
