--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 14
       - run: rm .npmrc
       - run: echo "${{ secrets.ARTIFACTORY_AUTH_TOKEN }}" | base64
-      - run: yarn -v
+      - run: yarn install --verbose
         name: Install NPM dependencies
         env:
           "yarn_always_auth": true,
