--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -13,10 +13,27 @@ jobs:
         with:
           node-version: 14
       - run: rm .npmrc
-      - run: echo "${{ secrets.ARTIFACTORY_AUTH_TOKEN }}" | base64
-      - run: yarn install --verbose
-        name: Install NPM dependencies
+      - run: yarn
         env:
           "yarn_always_auth": true,
           "yarn__auth": ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           "yarn_registry": "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
+      - run: yarn compile
+      - uses: actions/upload-artifact@v2
+        with:
+          name: workspace
+          path: |
+            **
+  test:
+    needs: build
+    name: Test
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: workspace
+      - run: yarn test:dev:ci
+
+
+
+
