--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -18,13 +18,13 @@ jobs:
           "yarn_always_auth": true,
           "yarn__auth": ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           "yarn_registry": "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
-      - run: yarn compile
-      - run: tar -zcvf $TMPDIR/vivid-env.tar.gz .
+      - run: yarn compile --concurrency=1
+      - run: tar -zcvf vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
         with:
           name: workspace
           path: |
-            $TMPDIR/vivid-env.tar.gz
+            vivid-env.tar.gz
   test:
     needs: build
     name: Test
@@ -33,8 +33,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: workspace
-          path: $TMPDIR/vivid-env.tar.gz
-      - run: tar -zxvf $TMPDIR/vivid-env.tar.gz
+      - run: tar -zxvf vivid-env.tar.gz
       - run: yarn test:dev:ci
 
 
