--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -18,8 +18,8 @@ jobs:
           "yarn_always_auth": true,
           "yarn__auth": ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           "yarn_registry": "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
-      - run: yarn compile --concurrency=1
-      - run: tar -zcvf vivid-env.tar.gz .
+      - run: yarn compile --concurrency=2 --scope=@voange/core
+      - run: tar -zcf vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
         with:
           name: workspace
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: workspace
-      - run: tar -zxvf vivid-env.tar.gz
+      - run: tar -zxf vivid-env.tar.gz
       - run: yarn test:dev:ci
 
 
