--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -19,13 +19,12 @@ jobs:
           "yarn__auth": ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
           "yarn_registry": "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
       - run: yarn compile --concurrency=2 --scope=@vonage/vvd-core --include-dependencies
-      - run: tar -zcf vivid-env.tar.gz .
+      - run: tar -zcf /tmp/vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
         with:
           name: workspace
           path: |
-            !vivid-env.tar.gz
-            vivid-env.tar.gz
+            /tmp/vivid-env.tar.gz
   test:
     needs: build
     name: Test
@@ -34,5 +33,6 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: workspace
-      - run: tar -zxf vivid-env.tar.gz
+          path: /tmp/vivid-env.tar.gz
+      - run: tar -zxf /tmp/vivid-env.tar.gz
       - run: yarn test:dev:ci
