--- a/.github/workflows/compile-test.yml
+++ b/.github/workflows/compile-test.yml
@@ -31,8 +31,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v2
         with:
-          name: workspace
-          path: /tmp/vivid-env.tar.gz
-      - run: cd /tmp && ls -al
-      - run: tar -zxf /tmp/vivid-env.tar.gz
-      - run: yarn test:dev:ci
+          path: /tmp/artifacts
+      - run: cd /tmp/artifacts && ls -al
+      # - run: tar -zxf /tmp/vivid-env.tar.gz
+      # - run: yarn test:dev:ci
